[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "283018-comp_vision"
version = "0.1.0"
description = "Computer vision project - Super Resolution GAN, CLI + webGUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.28.0",
    "nicegui>=3.5.0",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "tensorflow>=2.20.0",
]

[project.scripts]
comp_vision-cli = "upscaler_cli:cli_main"
comp_vision-gui = "upscaler_cli:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/upscaler", "src/upscaler_cli", "src/upscaler_gui"]

[tool.hatch.build.force-include]
"src/upscaler/weights" = "upscaler/weights"
